# mexc-rust-sdk

./: Cargo.toml  README.md
src/: account.rs  lib.rs  market.rs  orders.rs  testing.rs  utils.rs
src/futures/: mod.rs  structures.rs
