[package]
name = "mexc-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
hmac = "0.12.1"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread","full"] }
serde = { version = "1.0.203", features = ["derive"] }
